--- a/styles/libreriauno.css
+++ b/styles/libreriauno.css
@@ -10,13 +10,13 @@
     cursor: pointer;
     transition: .3s;
 }
-.span-btn {
+.span-btn-global {
     background-color: blue;
     padding: 16px 24px;
     border-radius: 6px;
     transition: .3s;
 }
-.btn-global:hover .span-btn {
+.btn-global:hover .span-btn-global {
     background: none;
 }
 .btn-global:active {
@@ -34,4 +34,52 @@
     cursor: pointer;
     transition: .3s;
 }
-
+.span-btn-intro {
+    background-color: gray;
+    padding: 10px 12px;
+    border-radius: 6px;
+    transition: .3s;
+}
+.btn-intro:hover .span-btn-intro{
+    background: none;
+}
+.btn-intro:active {
+    transform: scale(0.12);
+}
+/* otro boton */
+.btn-bright {
+    border: 0;
+    background: black;
+    color: white;
+    font-size: 25px;
+    padding: 8px 16px;
+    cursor: pointer;
+    font-weight: bold;
+    position: relative;
+    border-radius: 12px;
+}
+.btn-bright:hover {
+    background-image: linear-gradient(100deg, yellow, blue, purple, green);
+}
+.btn-bright:active {
+    transform: scale(0.9);
+}
+/* otro boton */
+.btn-transparent {
+    border: solid 1px gray;
+    background-color: transparent;
+    font-size: 20px;
+    border-radius: 6px;
+    color: gray;
+    padding: 4px 8px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.btn-transparent:hover {
+    background-color: gray;
+    color: white;
+    border: solid 1px black;
+}
+.btn-transparent:active {
+    transform: scale(0.9);
+}
