Eliminando imagenes de mis Estilos

--- a/styles/stylesindex.css
+++ b/styles/stylesindex.css
@@ -1,10 +1,10 @@
 body {
     background-color: black;
     color: white;
-    background-image: url("../images/pokemonVolvasor.jpg");
+    /* background-image: url(""); */
 }
 body.princ {
-    background-image: url("../images/pokemonball.jpg");
+    /* background-image: url(""); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
